# cloud-file

./: Cargo.toml  canister_ids.json  dfx.json  package.json  tsconfig.json  webpack.config.js
frontend/declarations/manager/: index.js  manager.did.js
frontend/src/: DataTable.jsx  app.jsx  index.js  index.jsx  modal.jsx
manager/: Cargo.toml  candid.did
manager/src/: api.rs  mem.rs
manager/src/canister/: manager.rs  types.rs
src/declarations/manager/: index.js  manager.did.d.ts
src/frontend/src/: App.jsx
src/manager/src/: api.rs  lib.rs  main.rs
src/manager/src/canister/: manager.rs  mod.rs  types.rs
src/operator/: Cargo.toml  operator.did
src/operator/src/: api.rs  lib.rs  user.rs
src/operator/src/canister/: create.rs  install.rs  mod.rs
src/operator_frontend/src/: App.jsx  index.jsx
src/storage_data/: Cargo.toml
src/storage_data/src/: api.rs  lib.rs
src/storage_index/: Cargo.toml
src/storage_index/src/: api.rs
src/wasm_bytecode/src/: api.rs
wasm_bytecode/: Cargo.toml  candid.did
wasm_bytecode/src/: api.rs  api_types.rs  lib.rs
