[package]
name = "wasm_bytecode"
version = "0.0.1"
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.15"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-types = "0.4.0"

serde_json = "1.0.85"
serde = "1.0.144"
once_cell = "1.13.0"
rusqlite = { git = "https://github.com/Kirsky0/rusqlite", features = ["bundled"], branch = "wasm32-unknown-unknown" }
